refactor: support multiple SQL modules in scheduled tasks
- Add TaskSqlConfig/TaskSqlRelation entities and management APIs
- Refactor TaskConfig to reference multiple SQLs instead of single SQL
- Support recipient groups and merge recipients from groups
- Execute multiple SQLs per task, merging outputs for shared templates
- Preserve unmatched placeholders during chained template processing
- Fix PPT placeholder replacement to retain text formatting
- Add frontend SQL management pages and refactor task form/list
- Introduce Java-based schema migration runner for MySQL 5.7

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>